tests/baselines/reference/indirectSelfReferenceGeneric.errors.txt
==== tests/cases/compiler/indirectSelfReferenceGeneric.ts (1 errors) ====
    class a<T> extends b<T> { }
          ~
!!! indirectSelfReferenceGeneric.ts(1,7): error TS2100: Type 'a<T>' recursively references itself as a base type.
    class b<T> extends a<T> { }